--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	  <script>document.getElementById('jsnabeor').style.display='block';</script>
 	  <div style="display:none" id="dialog" title="Downloadpage"> 
 		  <li><a href="Download/hash.txt" target="_blank"><button class="ui-button ui-corner-all ui-widget">Hashwerte</button></li>
-		  <li><a href="Download/Putty Installer.exe"><button class="ui-button ui-corner-all ui-widget">Installer (Empfohlen; EINFACHE INSTALLATION)</button></li>
+		  <li><a href="Download/Putty Installer.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer</button></li>
 	
 </div>   </div>
     <hr><div>
