--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 	  <script>document.getElementById('jsnabeor').style.display='block';</script>
 	  <div style="display:none" id="dialog" title="Downloadpage"> 
 		  <li><a href="Download/hash.txt" target="_blank"><button class="ui-button ui-corner-all ui-widget">Hashwerte</button></li>
+	          <li><a href="Download/Putty Installer V2.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V2</button></li>
 		  <li><a href="Download/Putty Installer.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer</button></li>
 	
 </div>   </div>
