--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
 	  <script>document.getElementById('jsnabeor').style.display='block';</script>
 	  <div style="display:none" id="dialog" title="Downloadpage"> 
 		  <li><a href="Download/hash.txt" target="_blank"><button class="ui-button ui-corner-all ui-widget">Hashwerte</button></li>
+	          <li><a href="Download/putty installer v3.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V3</button></li>
 	          <li><a href="Download/Putty Installer V2.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V2</button></li>
 		  <li><a href="Download/Putty Installer.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer</button></li>
-	
+	  
 </div>   </div>
     <hr><div>
     <h3>Lizenz:</h3>
 	  <p><a href="LICENSE" target="_blank">MIT Lizenz</a>
     </div>
+	
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
 <script>
