--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
 	  <script>document.getElementById('jsnabeor').style.display='block';</script>
 	  <div style="display:none" id="dialog" title="Downloadpage"> 
 		  <li><a href="Download/hash.txt" target="_blank"><button class="ui-button ui-corner-all ui-widget">Hashwerte</button></li>
+	          <li><a href="Download/Putty installer V4 Stable.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V4 Stable</button></li>
 	          <li><a href="Download/putty installer v3.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V3</button></li>
 	          <li><a href="Download/Putty Installer V2.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer V2</button></li>
 		  <li><a href="Download/Putty Installer.exe"><button class="ui-button ui-corner-all ui-widget">Putty Installer</button></li>
-	  
+	
 </div>   </div>
     <hr><div>
     <h3>Lizenz:</h3>
