--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
     <h3>Lizenz:</h3>
 	  <p><a href="LICENSE" target="_blank">MIT Lizenz</a>
     </div>
-	
+	<hr>
+	<h1>NSIS SCRIPT</h1>
+	<script src="https://gist.github.com/Sharkbyteprojects/c514a7cb6adc948ea0854e4020f19f8c.js"></script>
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
 <script>
