--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
     </div>
 	<hr>
 	<h1>NSIS SCRIPT</h1>
-	<script src="https://gist.github.com/Sharkbyteprojects/c514a7cb6adc948ea0854e4020f19f8c.js"></script>
+	<script src="https://gist.github.com/Sharkbyteprojects/c514a7cb6adc948ea0854e4020f19f8c.js"></script>	<hr>
+	<h2>WIe man ein Program mit NSIS Ausf&uuml;rt:</h2><br>
+	<script src="https://gist.github.com/Sharkbyteprojects/063f589a2ab5dfe4a1cf1ccca9f79339.js"></script>
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
 <script>
