--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<hr>
 	<h1>NSIS SCRIPT</h1>
 	<script src="https://gist.github.com/Sharkbyteprojects/c514a7cb6adc948ea0854e4020f19f8c.js"></script>	<hr>
-	<h2>WIe man ein Program mit NSIS Ausf&uuml;rt:</h2><br>
+	<h2>Wie man ein Program mit NSIS Ausf&uuml;rt:</h2><br>
 	<script src="https://gist.github.com/Sharkbyteprojects/063f589a2ab5dfe4a1cf1ccca9f79339.js"></script>
 <script src="external/jquery/jquery.js"></script>
 <script src="jquery-ui.js"></script>
