--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>   </div>
     <hr><div>
     <h3>Lizenz:</h3>
-	  <p><a href="LICENSE" target="_blank">MIT Lizenz</a>
+	  <p><a href="LICENSE.html" target="_blank">MIT Lizenz</a>
     </div>
 	<hr>
 	<h1>NSIS SCRIPT</h1>
