--- a/X-Mailer embed.html
+++ b/X-Mailer embed.html
@@ -50,7 +50,7 @@ Einbetten</small></h1>
       <td style="vertical-align: top; width: 917px; height: 48px; text-align: center;">&lt;form
 action="http://services.sharkbyte.bplaced.net/send.php"
 method="post"&gt;<br>
-&lt;p&gt;Empfänger (MAIL ADRESSE): &lt;input autofocus size="100"
+&lt;p&gt;EmpfÃ¤nger (MAIL ADRESSE): &lt;input autofocus size="100"
 type="email" name="to" /&gt;&lt;/p&gt;<br>
 &lt;p&gt;Absender (MAIL ADRESSE): &lt;input size="100" type="email"
 name="from" /&gt;&lt;/p&gt;<br>
@@ -64,7 +64,7 @@ name="from" /&gt;&lt;/p&gt;<br>
     </tr>
     <tr>
       <td style="vertical-align: top; width: 319px; height: 88px;">
-      <div style="text-align: center; width: 354px;">und fügen sie den
+      <div style="text-align: center; width: 354px;">und fÃ¼gen sie den
 Code danach in ihrer Webseite ein.
       <br>
       </div>
@@ -78,7 +78,7 @@ PGP Signatur</a>].
     <tr>
       <td style="vertical-align: top; width: 319px;"><br>
       </td>
-      <td style="vertical-align: top; width: 917px; text-align: center;"><a href="X-Mailer%20embed.html">Zurück</a><br>
+      <td style="vertical-align: top; width: 917px; text-align: center;"><a href="X-Mailer%20embed.html">Zur&uuml;ck</a><br>
       </td>
     </tr>
   </tbody>
