--- a/X-Mailer embed.html
+++ b/X-Mailer embed.html
@@ -64,7 +64,7 @@ name="from" /&gt;&lt;/p&gt;<br>
     </tr>
     <tr>
       <td style="vertical-align: top; width: 319px; height: 88px;">
-      <div style="text-align: center; width: 354px;">und fügen sie den
+      <div style="text-align: center; width: 354px;">und f&uuml;gen sie den
 Code danach in ihrer Webseite ein.
       <br>
       </div>
