--- a/X-Mailer embed.html
+++ b/X-Mailer embed.html
@@ -78,7 +78,7 @@ PGP Signatur</a>].
     <tr>
       <td style="vertical-align: top; width: 319px;"><br>
       </td>
-      <td style="vertical-align: top; width: 917px; text-align: center;"><a href="X-Mailer%20embed.html">Zur&uuml;ck</a><br>
+      <td style="vertical-align: top; width: 917px; text-align: center;"><a href="https://bit.ly/2Qly1ZW">Zur&uuml;ck</a><br>
       </td>
     </tr>
   </tbody>
